@@ -77,6 +77,7 @@ Data Changes:
 - Fixed incorrect weapon specialisations for some underbarrel weapons.
 - Fixed incorrect bonus for the Intrusion Countermeasure Paragon.
 - Fixed pricing of the Máquina Conversion from Hard Targets.
+- Prototype Materials no longer increases the special modifications limit for a character, but instead unlocks a quality called "Special Modifications (Prototype Materials)" that has the same effect as a single level of Special Modifications. Fixes #4872.
 
 Changed/New Strings:
 - Checkbox_Options_SpecializationsBreakSkillGroups
